# sportsref-nfl

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  cli.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
core/: game.py  schedule.py  scraper.py
data/: depth_charts.py  qb_elos.py  rosters.py  stats.py
sportsref_nfl/: __init__.py  cache.py  cli.py
sportsref_nfl/core/: game.py  schedule.py  scraper.py
sportsref_nfl/data/: depth_charts.py  draft.py  qb_elos.py  rosters.py  stadiums.py  stats.py
sportsref_nfl/utils/: names.py
tests/: __init__.py  test_imports.py
utils/: names.py
