[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sportsref-nfl"
version = "1.0.0"
description = "NFL data scraping library for Pro Football Reference"
authors = [
    {name = "Taylor Firman", email = "tefirman@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
    "cloudscraper>=1.2.0",
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "geopy>=2.1.0",
    "selenium>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/tefirman/sportsref-nfl"
Repository = "https://github.com/tefirman/sportsref-nfl"
Issues = "https://github.com/tefirman/sportsref-nfl/issues"
Documentation = "https://github.com/tefirman/sportsref-nfl#readme"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "ruff>=0.1.0",
    "mypy>=0.812",
    "pre-commit>=3.0.0",
    "types-requests>=2.25.0",
    "types-beautifulsoup4>=4.9.0",
]

[project.scripts]
sportsref-nfl = "sportsref_nfl.cli:main"

[tool.setuptools.packages.find]
include = ["sportsref_nfl*"]

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true